--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-rasterio
-numpy
-pandas
-scikit-learn
-matplotlib
-seaborn
-scipy
-scikit-image
+numpy>=1.20.0
+matplotlib>=3.3.0
+scikit-learn>=0.24.0
+scikit-image>=0.18.0
+rasterio>=1.2.0
+pandas>=1.3.0
